<resources>
    <string name="app_name">SistemadeControledeCarros</string>
    <string name="action_configuracoes">Configurações</string>
    <string name="action_perfil">Perfil</string>
    <string name="action_criar_empresa">Criar Empresa</string>
    <string name="action_sobre">Sobre</string>
    <string name="action_deslogar">Deslogar</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Entrar</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_activity_agendar">Agendar</string>
    <string name="title_activity_cadastrar_usuario">Cadastrar</string>
    <string name="title_activity_cadastrar_veiculos">Cadastrar</string>
    <string name="title_activity_historico">Historico</string>
    <string name="title_activity_cadastrar_historico_veiculo">Cadastrar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_usuario">Usuário</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_registrar">Registrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Este endereço de e-mail é inválido</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">Este campo é requerido</string>
    <string name="permission_rationale">"Permissão a contatos é necessário para concluir ação."</string>
    <string name="error_empresa_cadastrada">Empresa existente</string>

    <string name="nome">Nome</string>
    <string name="funcao">Função</string>
    <string name="login">Login</string>
    <string name="senha_antiga">Senha antiga</string>
    <string name="senha_nova">Senha</string>
    <string name="senha_nova_novamente">Senha novamente</string>

    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="placa">Placa</string>
    <string name="Alterar">Alterar</string>
    <string name="cor">Cor</string>
    <string name="ano">Ano</string>
    <string name="quilometragem">Quilometragem</string>
    <string name="quilometragem_proxima">Próxima quilometragem</string>
    <string name="data">Data</string>

    <string name="destino">Destino</string>

    <string name="proxima_revisao">Próxima revisão</string>
    <string name="proxima_quilometragem">Próxima quilômetragem</string>

    <string-array name="array_revisao">
        <item>Troca de óleo</item>
        <item>Revisão</item>
    </string-array>

    <string-array name="array_entrada_saida">
        <item>Entrada</item>
        <item>Saída</item>
    </string-array>

    <string name="title_activity_detalhe_reservar2">Detalhe Reserva</string>
    <string name="title_activity_lista_veiculos2">Lista de Veículos</string>
    <string name="title_activity_registrar">Registrar</string>
    <string name="title_activity_empresa_cadastrar">Cadastrar Empresa</string>
    <string name="title_activity_cadas_usuario">Cadastrar Usuário</string>
    <string name="title_activity_cadastrar_funcao">ActivityCadastrarFuncao</string>

</resources>
