<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.miguelwolf.sistemadecontroledecarros.view.ActivityMain">

    <item
        android:id="@+id/action_perfil"
        android:orderInCategory="100"
        android:title="@string/action_perfil"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_configuracoes"
        android:orderInCategory="100"
        android:title="@string/action_configuracoes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sobre"
        android:orderInCategory="100"
        android:title="@string/action_sobre"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_deslogar"
        android:orderInCategory="100"
        android:title="@string/action_deslogar"
        app:showAsAction="never" />

</menu>
