<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_activity_cadastrar_veiculos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.miguelwolf.sistemadecontroledecarros.view.ActivityCadastrarVeiculos"
    tools:showIn="@layout/activity_cadastrar_veiculos">

    <ImageView
        android:id="@+id/cadastrar_usuario_iv_foto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/corolla" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/preto_transparente"
        android:gravity="center"
        android:text="@string/Alterar"
        android:textColor="@color/branco"
        android:textSize="18dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cadastrar_usuario_iv_foto"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastrar_usuario_ti_marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/cadastrar_usuario_tv_marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/marca"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastrar_usuario_ti_modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadastrar_usuario_ti_marca">

            <AutoCompleteTextView
                android:id="@+id/cadastrar_usuario_tv_modelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/modelo"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastrar_usuario_ti_placa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadastrar_usuario_ti_modelo">

            <AutoCompleteTextView
                android:id="@+id/cadastrar_usuario_tv_placa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placa"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastrar_usuario_ti_cor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadastrar_usuario_ti_placa">

            <AutoCompleteTextView
                android:id="@+id/cadastrar_usuario_tv_cor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cor"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastrar_usuario_ti_ano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadastrar_usuario_ti_cor">

            <AutoCompleteTextView
                android:id="@+id/cadastrar_usuario_tv_ano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ano"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastrar_usuario_ti_quilometragem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadastrar_usuario_ti_ano">

            <AutoCompleteTextView
                android:id="@+id/cadastrar_usuario_tv_quilometragem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quilometragem"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastrar_usuario_ti_quilometragem_proxima"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadastrar_usuario_ti_quilometragem">

            <AutoCompleteTextView
                android:id="@+id/cadastrar_usuario_tv_quilometragem_proxima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quilometragem_proxima"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastrar_usuario_ti_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadastrar_usuario_ti_quilometragem_proxima">

            <AutoCompleteTextView
                android:id="@+id/cadastrar_usuario_tv_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</RelativeLayout>
