<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_activity_cadastrar_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.miguelwolf.sistemadecontroledecarros.view.ActivityCadastrarUsuario"
    tools:showIn="@layout/activity_cadastrar_usuario">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastrar_usuario_ti_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/cadastrar_usuario_tv_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastrar_usuario_ti_funcao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadastrar_usuario_ti_nome">

            <AutoCompleteTextView
                android:id="@+id/cadastrar_usuario_tv_funcao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/funcao"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastrar_usuario_ti_senha_antiga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadastrar_usuario_ti_funcao">

            <AutoCompleteTextView
                android:id="@+id/cadastrar_usuario_tv_senha_antiga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha_antiga"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastrar_usuario_ti_senha_nova"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadastrar_usuario_ti_senha_antiga">

            <AutoCompleteTextView
                android:id="@+id/cadastrar_usuario_tv_senha_nova"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha_nova"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastrar_usuario_ti_senha_nova_novamente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadastrar_usuario_ti_senha_nova">

            <AutoCompleteTextView
                android:id="@+id/cadastrar_usuario_tv_senha_nova_novamente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha_nova_novamente"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</RelativeLayout>
