<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.miguelwolf.sistemadecontroledecarros.view.ActivityCadasUsuario"
    tools:showIn="@layout/activity_cadas_usuario">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/cadas_usuario_ti_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/cadas_usuario_tv_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Função"
            android:layout_marginTop="10dp"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/cadas_usuario_sp_funcao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadas_usuario_ti_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadas_usuario_sp_funcao">

            <AutoCompleteTextView
                android:id="@+id/cadas_usuario_tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadas_usuario_ti_senha_antiga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadas_usuario_ti_login">

            <AutoCompleteTextView
                android:id="@+id/cadas_usuario_tv_senha_antiga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha_antiga"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadas_usuario_ti_senha_nova"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadas_usuario_ti_senha_antiga">

            <AutoCompleteTextView
                android:id="@+id/cadas_usuario_tv_senha_nova"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha_nova"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastrar_usuario_ti_senha_nova_novamente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadas_usuario_ti_senha_nova">

            <AutoCompleteTextView
                android:id="@+id/cadas_usuario_tv_senha_nova_novamente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha_nova_novamente"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

</android.support.v7.widget.LinearLayoutCompat>
