<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_activity_registrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.miguelwolf.sistemadecontroledecarros.view.ActivityRegistrar"
    tools:showIn="@layout/activity_registrar">

    <LinearLayout
        android:id="@+id/detalhe_reservar_ll_carro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:elevation="3dp"
        android:background="@color/branco">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/detalhe_reservar_ti_modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/detalhe_reservar_tv_modelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/modelo"
                android:inputType="textPersonName"
                android:text="Fiat Uno"
                android:padding="16dp"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/detalhe_reservar_ti_placa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/detalhe_reservar_tv_placa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placa"
                android:padding="16dp"
                android:text="STJ-2425"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mais"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/detalhe_reservar_ti_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detalhe_reservar_ll_carro">

        <AutoCompleteTextView
            android:id="@+id/detalhe_reservar_tv_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data"
            android:text="07/12/2016"
            android:inputType="text|date"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/detalhe_reservar_ti_destino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detalhe_reservar_ti_data">

        <AutoCompleteTextView
            android:id="@+id/detalhe_reservar_tv_destino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destino"
            android:text="Piraju-SP"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/registrar_sp_entrada_saida"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/detalhe_reservar_ti_destino"/>



</RelativeLayout>
